@@ -1,13 +1,10 @@
 
 TODO:
-- add more methods for playing sounds
 - add ambiance registration for biomes
 - add option to get sound by string name in "SoundGroup:get" using string.match
-- create SoundGroup instances for all cached mod sounds
 - fix "node_dug_meta" & "node_place_metal" are the same
 - create sounds.glass group
 - shorten length of rain_light, rain_medium, & wind
-- add "sounds.play_random" function
 - fix clock_tick loop
 - tests:
 	- fix wrong sound selected when changing groups (example: select #2, switch to group with one sound, switch to group with two sounds, press play)
